samples/wig/should_pass/comments.wig
# Today I went to the park
variableStep chrom=chr1
1 10
# I bought a sandwich
2 5
3 10
10 0
# It was not very tasty
