samples/wig/should_fail/bad_fields.wig
variableStep chrom=chr1
1 10
2 5
3 a
10 0
